Ligatures cause non-zero layout width for text with font-size: 0 https://bugs.webkit.org/show_bug.cgi?id=311246 rdar://173840866

Reviewed by Vitor Roriz.

This patch aligns WebKit with Gekco / Firefox and Blink / Chromium.

CTFontShapeGlyphs in the simple text path can produce non-zero glyph
advances when performing ligature substitution on a zero-sized CTFont,
because CoreText treats size 0 as "use default size". This causes text
with ligatures (e.g. "fi" in Hoefler Text, "tt" in Manrope) to affect
layout even when font-size is 0, shifting surrounding content.

The complex text path already guards against this in
ComplexTextController::collectComplexTextRuns(), and
platformWidthForGlyph() also skips CTFontGetAdvancesForGlyphs at
size 0. Add the same guard to Font::applyTransforms() so
CTFontShapeGlyphs is not called for zero-sized fonts.

Credits to Karl Dubost for writing Web Platform Test for this.

Tests: fast/text/font-size-zero-ligatures.html: Uses system font (macOS only)
       imported/w3c/web-platform-tests/css/css-fonts/font-size-zero-ligatures.html: Uses web font

* LayoutTests/fast/text/font-size-zero-ligatures-expected.txt: Added.
* LayoutTests/fast/text/font-size-zero-ligatures.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-size-zero-ligatures-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-size-zero-ligatures.html: Added.
* Source/WebCore/platform/graphics/coretext/FontCoreText.cpp:
(WebCore::Font::applyTransforms const):

Canonical link: https://commits.webkit.org/310394@main